[project]
name = "pad-tickler"
version = "0.1.0"
description = "Padding oracle CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.6",
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "go-task-bin>=3.44.1",
    "pytest>=8.4.1",
]
