[project]
name = "padtickler"
version = "0.1.0"
description = "Padding oracle CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.6",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "click>=8.1.0",
]

[project.scripts]
padtickler = "pad_tickler.__main__:main"

[dependency-groups]
dev = [
    "go-task-bin>=3.44.1",
    "pytest>=8.4.1",
    "ruff>=0.14.2",
]

demo = [
    "fastapi[standard]>=0.116.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pad_tickler", "src/demo_api"]

[tool.hatch.version]
path = "src/pad_tickler/__init__.py"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/pad_tickler/__init__.py:__version__"]
build_command = "uv build"
dist_path = "dist/"
upload_to_vcs_release = true
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "^Merge pull request",
  "^Merge branch",
  "^Bump version",
  "^Release"
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }
